# ChangeLog for dev-libs/gdl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/gdl/ChangeLog,v 1.39 2010/04/08 18:25:28 armin76 Exp $

  08 Apr 2010; Raúl Porcel <armin76@gentoo.org> gdl-2.28.2.ebuild:
  alpha/ia64/sparc stable wrt #298200

  07 Apr 2010; Brent Baude <ranger@gentoo.org> gdl-2.28.2.ebuild:
  Marking gdl-2.28.2 ppc for bug 298200

  16 Mar 2010; Christian Faulhammer <fauli@gentoo.org> gdl-2.28.2.ebuild:
  stable x86, bug 298200

  06 Mar 2010; Pacho Ramos <pacho@gentoo.org> gdl-2.28.2.ebuild:
  amd64 stable, bug 298200

*gdl-2.28.2 (10 Dec 2009)

  10 Dec 2009; Gilles Dartiguelongue <eva@gentoo.org> +gdl-2.28.2.ebuild:
  Version bump. Fix a bug with gtk+-2.18.

*gdl-2.28.1 (29 Oct 2009)

  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org> +gdl-2.28.1.ebuild:
  New version for GNOME 2.28.

  27 Sep 2009; nixnut <nixnut@gentoo.org> gdl-2.24.0.ebuild:
  ppc stable #268359

  19 Aug 2009; Jeroen Roovers <jer@gentoo.org> ChangeLog:
  Stable for HPPA (bug #268359).

  06 Jul 2009; Alexis Ballier <aballier@gentoo.org> gdl-2.26.2.ebuild:
  keyword ~x86-fbsd thanks to Davide Italiano <dav_it@gentoo.org>, bug
  #233401

  04 Jul 2009; Brent Baude <ranger@gentoo.org> gdl-2.24.0.ebuild:
  Marking gdl-2.24.0 ppc64 for bug 268359

  17 Jun 2009; Tobias Klausmann <klausman@gentoo.org> gdl-2.24.0.ebuild:
  Stable on alpha, bug #268359

*gdl-2.26.2 (18 May 2009)

  18 May 2009; Gilles Dartiguelongue <eva@gentoo.org> +gdl-2.26.2.ebuild:
  Bump to 2.26.2. Translation updates.

  13 May 2009; Markus Meier <maekke@gentoo.org> gdl-2.24.0.ebuild:
  revert stabilization on amd64/x86, see bug #268359

  03 May 2009; Markus Meier <maekke@gentoo.org> gdl-2.24.0.ebuild:
  amd64/x86 stable, bug #268359

*gdl-2.26.0 (02 May 2009)

  02 May 2009; Gilles Dartiguelongue <eva@gentoo.org> metadata.xml,
  +gdl-2.26.0.ebuild:
  New version for GNOME 2.26. Bug fixes.
