@@ -1,18 +1,16 @@
-DIST gdl-0.7.1.tar.bz2 441389 RMD160 e24e8607bafb23a93e4e6ad7c0a367e1d99f2611 SHA1 4f32981d28189b9ed23b1a3e6fa536f1e3c4f2d8 SHA256 293597b40452ce8799de53627683d5db7ba2388f607e33c0007d0315a7866835
-DIST gdl-0.7.11.tar.bz2 521832 RMD160 cfe65f2a3d2cb3b6d47484f49a7de3e289b68e05 SHA1 53e8f2972fa13d6cea4c1e83ae23c5efb5dc6481 SHA256 98c97d185acec2b80769aaaa6e4bde938514e8cd5ff9df2956aab93b6584abde
-DIST gdl-0.7.6.tar.bz2 448801 RMD160 56bc92bbaf37ecfc4073d176ac2fd096ef93f66f SHA1 3dddee33006caffefcf07575d6c8b7ccf6e89f31 SHA256 8f4187a7c0740f140f1b171498cb45044e2d67ee0f9b0625dba6eaafc6b84790
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST gdl-2.24.0.tar.bz2 551420 RMD160 f11399a2a00d671c6a5d4e472d29c5026329469f SHA1 dd7b9fd951e7d6011edc9cd002ce6b06be3ccb1d SHA256 c175ac5faa1c3e27464f71f80c632bb3a960aa03ccd748736aead20adc31a112
-DIST gdl-2.26.0.tar.bz2 541006 RMD160 db6fc69c7ffc3d06bbf95448f334b2e203d90759 SHA1 2d015aea38087e946b1138e5fcb206ce008f0751 SHA256 ed69d46a1eb490b28812c2cc28769d74e8664ed7617c579806c6146ff9addb54
-DIST gdl-2.26.2.tar.bz2 552658 RMD160 c4a2dee8355f6b005490eda2cd0ef2399e2e5179 SHA1 29402c29c42fef5dc37748d4ff52e1f96e94f2b4 SHA256 bc19871a7512f85b684a332e282512e41bb354dc632e1a6cf3ca07708c344410
-DIST gdl-2.28.1.tar.bz2 539335 RMD160 5f06423bce632bcdad57069d40c67e1ec0fc8d6c SHA1 42d3573c670dd74f484ba342c6c6b91cdb5b542f SHA256 f856ea09ac79f909c45111543ac0928a2a95174873de1a919533ede46aa3aff1
 DIST gdl-2.28.2.tar.bz2 543823 RMD160 2c9fc3c895bddca8a900df853c2353a132a97e3a SHA1 eaedddc950c262c54713b6e65a3a2dbbe6adc1d4 SHA256 c389c4fa623ce00b5a6da1103f4f4a913e4641e9787d13ba37854f17b9efdcf7
-EBUILD gdl-0.7.1.ebuild 644 RMD160 111a2c9589cc04e0f7094d4894068a12635a040e SHA1 e40321137c828533b57469f0f2b40f277fbc6a7b SHA256 3aa00da5b9406bf2a41f191052cf0e37d4bf40dafaa1d53cf5eb13acce0516d8
-EBUILD gdl-0.7.11.ebuild 789 RMD160 a3b926e1f28e26fb4ad4ef547a3e735333ce98af SHA1 cbab0adcc5b71a95b6b16cbd262d675960d03b07 SHA256 95ade0d946a1650c17e5147bde4bd24bc1c7d4662c32e102f041c3a99a2ebd35
-EBUILD gdl-0.7.6.ebuild 773 RMD160 fa339455586931a355f98633b264767248807ae7 SHA1 b1690252fced060dc100f84e4eabbbe518a35abb SHA256 ede7255cf1a347965d70ffac5b7704183f8d20f571b01c3320458629862fd25d
-EBUILD gdl-2.24.0.ebuild 731 RMD160 fed124ea8baf6ed6b5c69d1ccce400bf91208589 SHA1 d839bd49591ce23eb5c929fa278f8f0724f5e62c SHA256 89bad33af27ecfd8a73953def422cfa49d7625bb359c9e8bdb91d2fdb06d1a2a
-EBUILD gdl-2.26.0.ebuild 731 RMD160 f94072d27c951eddd55ba529305f27d7945e874b SHA1 490ef46ed45717edaed690c65de52637672a103c SHA256 a58b9cf94e4eeae5c39c86bbc6784d9c4b453c736371b61260ddd32a747168c3
-EBUILD gdl-2.26.2.ebuild 746 RMD160 683c93651ff38bf777acfdc2c34a1018beaafa62 SHA1 9ccf1344201d1f6aced9ff5371e9695da6c20846 SHA256 ba95efd0b8c35e2600e722833b4c8aa1f76a4a29d158b20ef29878e8e91eb499
-EBUILD gdl-2.28.1.ebuild 1129 RMD160 c29b5dddfaa3c99f654617196081b2fcf031494c SHA1 d84172ef41e08ad6980b47c34be25f7ad15acb85 SHA256 ad25dee9feaed925a81ed140deb2d022dd563fedd6fb5a429beeb3c36f1fc7d3
+EBUILD gdl-2.24.0.ebuild 693 RMD160 c756f7a360e551cc32c09b38b9fbb37f0e2d4d22 SHA1 95769ab7bd864fef74ea7976d06c2dae11ac95e8 SHA256 d2c251969f879cc3595604b0e643a9c9988b51a3f6d2acd4cfb742e971245d16
 EBUILD gdl-2.28.2.ebuild 1127 RMD160 bfa4808f21b01de6dfd94f0e2324646bb718bfe7 SHA1 8f0370f54e74e8c6e33196c61209151193ee63fe SHA256 a9c0c5a18cc63a35bee8484f50c1934f1b3cfd1bb45a8e76bd9a626572e673c5
-MISC ChangeLog 5273 RMD160 62f90794af817f0cfe49162099ab5a322fc7d7fd SHA1 354517e5d974d123ce0a1c28fca56f2ddbdcd7c2 SHA256 63ab8fbd2c69d501b685fa01bed4154fd621dd34edc87895316ef6d66d5913af
+MISC ChangeLog 5491 RMD160 e9a78b720153109d2e920edd0eccf2de49371e6d SHA1 cc37a97163b2a7ef713333fc2122efb850b47252 SHA256 a47bc4c78e91e7b78a5afafe46518e212b16705962effe4807465f933e0e2e1c
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkvPeMkACgkQ1fmVwcYIWAZVrACg70JlSGbA60/Dez2GIi4NlAPU
+0BkAoML5l/gCyrdaCo+xtJaPtpV5lf6S
+=dVgo
+-----END PGP SIGNATURE-----
