@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gdl/gdl-2.24.0.ebuild,v 1.10 2009/09/27 13:49:24 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gdl/gdl-2.24.0.ebuild,v 1.11 2010/04/21 22:14:28 eva Exp $
 
 inherit gnome2
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.gnome.org/"
 
 LICENSE="LGPL-2"
 SLOT="0"
-KEYWORDS="alpha ~amd64 hppa ~ia64 ppc ppc64 ~sparc ~x86"
+KEYWORDS="hppa ppc64"
 IUSE="doc"
 
 RDEPEND=">=dev-libs/glib-2
