@@ -1,46 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gdl/gdl-2.28.1.ebuild,v 1.1 2009/10/29 23:36:04 eva Exp $
-
-EAPI="2"
-GCONF_DEBUG="no"
-
-inherit eutils gnome2 multilib
-
-DESCRIPTION="The Gnome Devtool Libraries"
-HOMEPAGE="http://www.gnome.org/"
-
-LICENSE="LGPL-2.1"
-SLOT="0"
-KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
-IUSE="doc"
-
-RDEPEND=">=dev-libs/glib-2
-	>=x11-libs/gtk+-2.12
-	>=dev-libs/libxml2-2.4"
-DEPEND="${RDEPEND}
-	!<dev-python/gdl-python-2.19.1-r1
-	!<=dev-python/gnome-python-extras-2.19.1-r2
-	dev-util/pkgconfig
-	>=dev-util/intltool-0.35
-	doc? ( >=dev-util/gtk-doc-1.4 )"
-
-DOCS="AUTHORS ChangeLog MAINTAINERS NEWS README"
-
-src_prepare() {
-	gnome2_src_prepare
-
-	# Fix intltoolize broken file, see upstream #577133
-	sed "s:'\^\$\$lang\$\$':\^\$\$lang\$\$:g" -i po/Makefile.in.in \
-		|| die "sed failed"
-}
-
-pkg_preinst() {
-	gnome2_pkg_preinst
-	preserve_old_lib /usr/$(get_libdir)/libgdl-1.so.0
-}
-
-pkg_postinst() {
-	gnome2_pkg_postinst
-	preserve_old_lib_notify /usr/$(get_libdir)/libgdl-1.so.0
-}
