@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/gdl
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gdl/ChangeLog,v 1.39 2010/04/08 18:25:28 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gdl/ChangeLog,v 1.40 2010/04/21 22:14:28 eva Exp $
+
+  21 Apr 2010; Gilles Dartiguelongue <eva@gentoo.org> -gdl-0.7.1.ebuild,
+  -gdl-0.7.6.ebuild, -gdl-0.7.11.ebuild, gdl-2.24.0.ebuild,
+  -gdl-2.26.0.ebuild, -gdl-2.26.2.ebuild, -gdl-2.28.1.ebuild:
+  Clean up old revisions.
 
   08 Apr 2010; Raúl Porcel <armin76@gentoo.org> gdl-2.28.2.ebuild:
   alpha/ia64/sparc stable wrt #298200
